--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,8 @@ Winquake/id1/glquake/
 Winquake/id1/pak0.pak
 Winquake/id1/pak1.pak
 Winquake/id1/glquake
-Winquake/debugarm/glquake
-Winquake/releasearm/glquake
+Winquake/debugarm/
+Winquake/releasearm/
 debug_gl
 release_gl
 copy_to_rpi.bat
@@ -28,8 +28,8 @@ Winquake/id1/glquake/
 Winquake/id1/pak0.pak
 Winquake/id1/pak1.pak
 Winquake/id1/glquake
-Winquake/debugarm/glquake
-Winquake/releasearm/glquake
+Winquake/debugarm
+Winquake/releasearm
 *.tmp
 *.bak
 *.swp
